# dartllm

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: build-native.yml  ci.yml  release.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
blobs/macos/: libggml-base.0.dylib  libggml-blas.0.dylib  libggml-cpu.0.dylib  libggml-metal.0.dylib  libggml.0.dylib  libllama.0.dylib
blobs/macos/llamacpp.framework/: llamacpp
blobs/macos/llamacpp.framework/Versions/A/: llamacpp
blobs/macos/llamacpp.framework/Versions/A/Headers/: dartllm.h
doc/: TECHNICAL_DOCUMENTATION.md
example/: README.md  dartllm_example.dart  example.dart  huggingface_example.dart  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/dartllm/dartllm_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: dartllm.podspec
lib/: dartllm.dart
lib/src/api/: api.dart  dart_llm.dart  llm_model.dart
lib/src/core/: chat_template.dart  core.dart  huggingface_client.dart  inference_context.dart  inference_engine.dart  model_cache.dart  model_downloader.dart  sampler.dart  tokenizer.dart
lib/src/core/exceptions/: dartllm_exception.dart  exceptions.dart  inference_exception.dart  memory_exception.dart  model_exception.dart  network_exception.dart  platform_exception.dart
lib/src/models/: chat_completion.dart  chat_completion.freezed.dart  chat_message.dart  chat_message.freezed.dart  enums.dart  generation_config.dart  generation_config.freezed.dart  global_config.dart  global_config.freezed.dart  model_config.dart  model_config.freezed.dart  model_info.dart  model_info.freezed.dart  models.dart  text_completion.dart  text_completion.freezed.dart  usage_stats.dart  usage_stats.freezed.dart
lib/src/platform/: binding_factory.dart  binding_factory_native.dart  binding_factory_stub.dart  binding_factory_web.dart  generated_bindings.dart  isolate_manager.dart  library_loader.dart  native_binding.dart  platform.dart  platform_binding.dart  wasm_binding.dart
lib/src/utils/: logger.dart  memory_utils.dart  path_utils.dart  platform_utils.dart  utils.dart
llamacpp.framework/Versions/A/Resources/: Info.plist
macos/: dartllm.podspec
native/: .gitignore  CMakeLists.txt
native/scripts/: build_android.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_wasm.sh  build_windows.bat
native/src/: dartllm.cpp  wasm_pre.js
native/test/: CMakeLists.txt  test_dartllm.cpp
test/: dartllm_test.dart
test/integration/: native_binding_test.dart
test/unit/api/: dart_llm_test.dart  llm_model_test.dart
test/unit/core/: chat_template_test.dart  huggingface_client_test.dart  inference_context_test.dart  model_cache_test.dart  model_downloader_test.dart  sampler_test.dart
test/unit/core/exceptions/: dartllm_exception_test.dart  inference_exception_test.dart  memory_exception_test.dart  model_exception_test.dart  network_exception_test.dart  platform_exception_test.dart
test/unit/models/: chat_completion_test.dart  chat_message_test.dart  enums_test.dart  generation_config_test.dart  global_config_test.dart  model_config_test.dart  model_info_test.dart  text_completion_test.dart  usage_stats_test.dart
test/unit/platform/: binding_factory_test.dart  isolate_manager_test.dart  platform_binding_test.dart
test/unit/utils/: logger_test.dart  memory_utils_test.dart  path_utils_test.dart  platform_utils_test.dart
